refine confidential ai

--- a/phala-cloud/confidential-ai/benchmark.mdx
+++ b/phala-cloud/confidential-ai/benchmark.mdx
@@ -3,22 +3,26 @@ description: Performance benchmarks and metrics for LLM inference in GPU TEE env
 title: Benchmark
 ---
 
-## Benchmark Overview
+## Key Results
 
-As confidential AI gains traction for privacy-preserving applications, evaluating the performance overhead of running LLM in TEE on GPUs is essential. This benchmark provides developers with quantitative insights into GPU TEE efficiency.
+**TEE mode on H100/H200 GPUs runs up to 99% efficiency, nearly matching native performance.** This means you get confidential computing with minimal performance penalty.
 
-## GPU TEE Performance
+The efficiency improves as your workload grows. Larger models and longer sequences see even better performance relative to native execution.
 
-<Frame caption="Benchmark">
-    <img src="/images/confidential-ai/benchmark_result.png" />
+## What We Tested
+
+We benchmarked LLM inference in GPU TEE mode using NVIDIA H100 and H200 GPUs. TEE mode encrypts your data and computation while it runs on the GPU.
+
+<Frame caption="Benchmark Results">
+  <img src="/images/confidential-ai/benchmark_result.png" />
 </Frame>
 
-**The benchmark is based on running LLMs in NVIDIA H100 and H200,** our results show that as input size grows, the efficiency of TEE mode increases significantly.
+## Performance Insights
 
-When computation time within the GPU dominates overall processing time, the I/O overhead introduced by TEE mode diminishes, allowing efficiency to approach nearly **99%**. Efficiency growth is more pronounced in larger models, such as Phi3-14B-128k and Llama3.1-70B, due to their greater computational demands, which result in longer GPU processing times.
-
-**Consequently, the I/O overhead becomes increasingly trivial as model size increases**. The total token size (sum of input and output token size) significantly influences the throughput overhead. Larger total token counts lead to higher efficiencies, as they enhance the ratio of computation time to I/O time. These findings underscore the scalability of TEE mode in handling large-scale LLM inference tasks, particularly as input sizes and model complexities grow. The minimal overhead in high-computation scenarios validates its applicability in secure, high-performance AI workloads.
+- **Larger models perform better in TEE mode.** Models like Phi3-14B-128k and Llama3.1-70B show higher efficiency because they spend more time computing and less time on I/O operations.
+- **Longer sequences boost efficiency.** When you process more tokens (input + output), the computation-to-I/O ratio improves. This makes TEE overhead less noticeable.
+- **The sweet spot: High-computation workloads.** TEE mode shines when your GPU is doing heavy lifting. The encryption/decryption overhead becomes trivial compared to the actual computation time.
 
 ## Resources
 
-For more details of metrics and analysis, check the [benchmark paper](https://arxiv.org/pdf/2409.03992) we published earlier.
+For detailed metrics and analysis, check our [benchmark paper](https://arxiv.org/pdf/2409.03992).
