--- a/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
+++ b/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
@@ -1,44 +1,47 @@
 ---
-description: Rent Confidential GPU on Phala Cloud with various GPU device and flexible subscription.
+description: Train or deploy AI models with hardware-level security using TEE-protected GPUs on Phala Cloud.
 title: Confidential GPU
 ---
 
-Rent a Phala Cloud GPU Server with Confidential Computing capabilities. Deploy your models (training or inference) in a TEE-secured environment, just like a standard GPU server.
+<Note>
+Confidential GPU lets you run AI workloads with hardware-level security. Your models and data stay protected even from cloud providers.
+</Note>
 
-## Available GPU Options
+## Why Confidential GPU?
 
-Choose from high-performance GPUs:
+When you train or deploy AI models in the cloud, your data and model weights are typically visible to the cloud provider. Confidential GPU changes this by using TEE-protected hardware that keeps your workloads isolated and encrypted.
 
-- H200
-- H100
-- B200
+## Available Hardware
 
-<Frame caption="GPU Device">
+You can choose from these TEE-enabled GPUs.
+
+<Frame caption="GPU Device Selection">
   <img src="/images/confidential-ai/confidential-gpu/gpu-tee-01.png" />
 </Frame>
 
-## Customizable Hardware
+## Configuration Options
 
-Select your preferred configuration:
+Customize your setup with:
 
-- CPU, RAM, Storage
-- Location (data center regions)
-- GPU Quantity (1 GPU or up to 8 GPUs for scaling)
+- **Cores and RAM**: CPU cores and RAM allocation
+- **Storage**: SSD storage for datasets and models
+- **Location**: Choose from available data center regions
+- **Scaling**: Deploy 1, or up to 8 GPUs per instance
 
-## Commitment Period
+## Pricing Models
 
-Flexible subscription options:
+Three subscription options to fit your needs:
 
-- 6 months
-- 1 month
-- On-demand (pay-as-you-go)
+- **6-month commitment** - Best rates for long-term projects
+- **1-month commitment** - Flexible for shorter workloads
+- **On-demand** - Pay only for what you use
 
-## Review & Order
+## Review & Submit Order
 
-Check the Price section to confirm your hardware specs and cost. Click **Submit Order** to submit order.
+Check the Price section to confirm your hardware specs and cost and Click **Submit Order**.
 
-<Frame caption="Review & Submit Order">
+<Frame caption="Order Review">
   <img src="/images/confidential-ai/confidential-gpu/gpu-tee-02.png" />
 </Frame>
 
-Once successfully submitted, the Phala Cloud team will received the request and will contact you soon.
+After submitting, our team will contact you soon to confirm your setup and provide access credentials.
