--- a/network/references/hackathon-guides/ethglobal-singapore.mdx
+++ b/network/references/hackathon-guides/ethglobal-singapore.mdx
@@ -35,7 +35,7 @@ Welcome to the Hackathon guide for Phala's Agent Contracts. We are offering you 
 
 Here are our feature templates:
 
-* [RedPill Agent Contract](https://github.com/Phala-Network/ai-agent-template-redpill) - Get your [FREE RedPill API Key](https://red-pill.ai/ethglobal) and access top LLMs from OpenAI, Anthropic, Meta, Gwen, Mistral, and Google to create a Web3 x AI project for the hackathon.
+* [RedPill Agent Contract](https://github.com/Phala-Network/ai-agent-template-redpill) - Get your [FREE RedPill API Key](https://redpill.ai/ethglobal) and access top LLMs from OpenAI, Anthropic, Meta, Gwen, Mistral, and Google to create a Web3 x AI project for the hackathon.
 * [Viem SDK Agent Contract](https://github.com/Phala-Network/ai-agent-contract-viem) - Learn about a **new paradigm in transacting onchain** with the [Viem SDK](https://viem.sh) Agent Contract Template with key features to:
   * Derive an ECDSA account within a TEE
   * Sign/Verify Data with the derived account
@@ -68,7 +68,7 @@ How to qualify for as a top project?
 
 To get started with Phala Network
 
-* **Take the RedPill and access top AI LLMs**: Get an API Key on [RedPill](https://red-pill.ai/ethglobal). This requires a code to get access. Reach out to the Phala Team to get access. In the meantime, use the free developer API key that is rate limited.
+* **Take the RedPill and access top AI LLMs**: Get an API Key on [RedPill](https://redpill.ai/ethglobal). This requires a code to get access. Reach out to the Phala Team to get access. In the meantime, use the free developer API key that is rate limited.
 * **Try a New Paradigm in Transacting Onchain**: Build on the [viem Agent Contract Template](https://github.com/Phala-Network/ai-agent-contract-viem) where you can derive an account within a TEE and utilize the account to transact on any EVM chain.
 * **Choose from a** [**List of Agent Contract Templates**](#legacy-content-removed) or build a custom Agent Contract that connect to any API or uses an SDK of your choosing!
 * **Explore Documentation**: Familiarize yourself with our [Developer Documentation](https://docs.phala.network/).
@@ -78,12 +78,12 @@ To get started with Phala Network
 
 If you want to use the global hackathon RedPill API key, here are the details:
 
-* Create a FREE API Key at [https://red-pill.ai/ethglobal](https://red-pill.ai/ethglobal)&#x20;
+* Create a FREE API Key at [https://redpill.ai/ethglobal](https://redpill.ai/ethglobal)&#x20;
 * Free Rate-Limited API Key
-  * API Endpoint URL: [https://api.red-pill.ai/](https://api.red-pill.ai/)
+  * API Endpoint URL: [https://api.redpill.ai/](https://api.redpill.ai/)
   * API Key: `sk-qVBlJkO3e99t81623PsB0zHookSQJxU360gDMooLenN01gv2`
-* Doc: [https://docs.red-pill.ai/getting-started/how-to-use](https://docs.red-pill.ai/getting-started/how-to-use)
-* Supported Models: [https://docs.red-pill.ai/get-started/list-models](https://docs.red-pill.ai/get-started/list-models)
+* Doc: [https://docs.redpill.ai/getting-started/how-to-use](https://docs.redpill.ai/getting-started/how-to-use)
+* Supported Models: [https://docs.redpill.ai/get-started/list-models](https://docs.redpill.ai/get-started/list-models)
 
 Before you start building, you'll need to set up your development environment. Here are the prerequisites:
 
@@ -93,7 +93,7 @@ Before you start building, you'll need to set up your development environment. H
 #### Test RedPill API
 
 ```
-curl https://api.red-pill.ai/v1/chat/completions
+curl https://api.redpill.ai/v1/chat/completions
 -H "Content-Type: application/json"
 -H "Authorization: Bearer <YOUR_REDPILL_API_KEY>"
 -d '{ "model": "o1-preview", "messages": [ { "role": "user", "content": "Hello world!" } ], "temperature": 1 }'
