--- a/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent.mdx
+++ b/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent.mdx
@@ -49,7 +49,7 @@ You can select multiple clients and configure the account information for each. 
 
 ### **Step 3: Set the Model Provider**
 
-You need to choose a model provider for your agent to connect with and send requests to. In this example, we'll use [**OpenAI**](https://platform.openai.com/api-keys), but you can also opt for other model providers like [**RedPill**](https://red-pill.ai/blog/your-gateway-to-openai-claude-and-more-redpill-api), which supports over 200 AI models with a unified account.
+You need to choose a model provider for your agent to connect with and send requests to. In this example, we'll use [**OpenAI**](https://platform.openai.com/api-keys), but you can also opt for other model providers like [**RedPill**](https://redpill.ai/blog/your-gateway-to-openai-claude-and-more-redpill-api), which supports over 200 AI models with a unified account.
 
 If you're unsure about other settings, you only need to configure the **API key** and **API URL** and **model names**. You can generate an API key using your OpenAI account on the [**dashboard**](https://platform.openai.com/api-keys). Type API URL: `https://api.openai.com/v1`
 
