--- a/phala-cloud/confidential-ai/overview.mdx
+++ b/phala-cloud/confidential-ai/overview.mdx
@@ -10,11 +10,13 @@ title: Overview
   src="/images/confidential-ai/confidential-ai-overview.jpeg"
 />
 
+<Note>
 Run AI models with enterprise-grade security without sacrificing performance. Phala Cloud Confidential AI protects your models and data using GPU TEE - hardware-isolated environments that keep your AI workloads private and verifiable.
+</Note>
 
 ## Why Confidential AI?
 
-Traditional cloud AI deployments expose your models and data to the cloud provider. Confidential AI solves this by running everything inside hardware-protected enclaves. Your models stay private, your data stays secure, and you get cryptographic proof that execution happened in a trusted environment.
+Traditional cloud AI deployments expose your models and data to the cloud provider. Confidential AI solves this by running everything inside hardware-protected TEE. Your models stay private, your data stays secure, and you get cryptographic proof that execution happened in a trusted environment.
 
 ## Your Options
 
