--- a/phala-cloud/troubleshooting/troubleshooting.mdx
+++ b/phala-cloud/troubleshooting/troubleshooting.mdx
@@ -8,7 +8,7 @@ Join our support groups: 🌍 [Global](https://t.me/+nbhjx1ADG9EyYmI9), 🇨🇳
 
 ## Errors in Cloud UI
 
-1.  No available nodes found. Please try again later or contract support.
+1.  No available nodes found. Please try again later or contact support.
 
     This error indicates that there are no available nodes for deployment. Generally, this is because you are in the free tier and you have already deployed the maximum number of CVMs. Please upgrade to a paid plan to continue or delete your old CVMs.
 
