--- a/phala-cloud/security-and-privacy/set-secure-environment-variables.mdx
+++ b/phala-cloud/security-and-privacy/set-secure-environment-variables.mdx
@@ -10,7 +10,7 @@ same way as the variables defined in `.env` files. You should first define the e
 the Phala Cloud UI (or CLI), and then reference them in the docker compose file using the `${KEY}`
 syntax.
 
-A typical use case is pass secrets to your containers via environment variables, using the
+A typical use case is to pass secrets to your containers via environment variables, using the
 `environment:` docker compose directive.
 
 1.  **Declare Environment Variables in Docker Compose**
