refine confidential ai and add tool calling example

--- a/phala-cloud/attestation/overview.mdx
+++ b/phala-cloud/attestation/overview.mdx
@@ -13,7 +13,7 @@ Let’s get into it!
 
 ## Attestation Report Overview
 
-An attestation report (or "quote") is a cryptographically signed document containing evidence about the TEE environment, including hardware measurements, runtime measurements, and application-specific data. The Attestation Key sealed by the manufactory in the Quoting Enclave will be used to sign the quote when received request from Challenger. When the remote Challenger receives this report, it can validate that the environment meets expected security properties before trusting it with sensitive data or operations.
+An attestation report (or "quote") is a cryptographically signed document containing evidence about the TEE environment, including hardware measurements, runtime measurements, and application-specific data. The Attestation Key sealed by the manufactory in the Quoting will be used to sign the quote when received request from Challenger. When the remote Challenger receives this report, it can validate that the environment meets expected security properties before trusting it with sensitive data or operations.
 
 <Frame>
     <img src="https://img0.phala.world/files/1cf0317e-04a1-8025-945f-ce263a7b96e3.jpg" alt="" />
