Revert "refine confidential ai and add tool calling example"

--- a/phala-cloud/cases/tee_with_ai.mdx
+++ b/phala-cloud/cases/tee_with_ai.mdx
@@ -17,7 +17,7 @@ Check Phala Network's [2025 dAGI report](https://phala.network/reports/2025RealC
 
 AI has become a transformative force across industries, but its widespread adoption faces significant challenges related to data privacy, model security, and computational trust. As AI systems process increasingly sensitive information and make critical decisions, ensuring the confidentiality and integrity of both the data and the AI models themselves has become paramount.
 
-TEE offer a compelling solution to these challenges by providing hardware-enforced isolation for AI workloads. By running AI models and AI agents programs within TEE, organizations can protect sensitive data, prevent unauthorized access to proprietary models, and provide verifiable guarantees about the execution environment.
+TEE offer a compelling solution to these challenges by providing hardware-enforced isolation for AI workloads. By running AI models and AI agents programs within secure enclaves, organizations can protect sensitive data, prevent unauthorized access to proprietary models, and provide verifiable guarantees about the execution environment.
 
 ## The Need for TEE in AI Systems
 
