--- a/phala-cloud/cases/tee_with_zk_and_zkrollup.mdx
+++ b/phala-cloud/cases/tee_with_zk_and_zkrollup.mdx
@@ -25,7 +25,7 @@ In the blockchain space, our vision is to bring privacy, security, and verifiabi
 
 There are several benefits we can gain by introducing TEE:
 
-1. **Hardware-grade safety:** The privacy, confidentiality, and data integrity is guaranteed by hardware TEE.
+1. **Hardware-grade safety:** The privacy, confidentiality, and data integrity is guaranteed by hardware secure enclave.
 2. **No computation overhead:** Applications run TEE have nearly same speed compare with running in normal CPU env
 3. **Low verification cost:** The Gas consumption to verify TEE proof is minimal, requiring just an ECDSA verification.
 4. **No Privacy Leak:** The execution of ZK Prover running in TEE can be verified that it generates proofs without leaking any user data.
