--- a/network/compute-providers/run-workers-on-khala/using-prbv3-ui.mdx
+++ b/network/compute-providers/run-workers-on-khala/using-prbv3-ui.mdx
@@ -43,7 +43,7 @@ Click `Workers` in `Inventory` to jump to the Worker configuration interface.
 
 * Click `Add` button
 * Enter your custom name for the Worker and the desired `PID` for the worker
-* Enter the worker’s endpoint in the format http://{pRuntime-ip}:8000/. Replace {pRuntime-ip} with the IP of the worker.
+* Enter the worker’s endpoint in the format `http://{pRuntime-ip}:8000/`. Replace `{pRuntime-ip}` with the IP of the worker.
 * Enter the desired worker staking amount and add 12 zeros after the number. For example, `5000000000000000` means a staking value of `5000`.
 * Click `confirm`
 
