--- a/phala-cloud/troubleshooting/troubleshooting.mdx
+++ b/phala-cloud/troubleshooting/troubleshooting.mdx
@@ -8,16 +8,21 @@ Join our support groups: 🌍 [Global](https://t.me/+nbhjx1ADG9EyYmI9), 🇨🇳
 
 ## Errors in Cloud UI
 
-1.  No available nodes found. Please try again later or contact support.
+### No available nodes found. Please try again later or contact support.
 
-    This error indicates that there are no available nodes for deployment. Generally, this is because you are in the free tier and you have already deployed the maximum number of CVMs. Please upgrade to a paid plan to continue or delete your old CVMs.
+This error indicates that there are no available nodes for deployment. Generally, this is because you are in the free tier and you have already deployed the maximum number of CVMs. Please upgrade to a paid plan to continue or delete your old CVMs.
 
-    <Frame caption="No available nodes found error">
-        <img src="/images/error-no-available-nodes.png" alt="No available nodes found" />
-    </Frame>
+<Frame caption="No available nodes found error">
+    <img src="/images/error-no-available-nodes.png" alt="No available nodes found" />
+</Frame>
 
 ## Errors in CVM Logs
 
-1.  **exec /usr/local/bin/docker-entrypoint.sh: exec format error**
+### exec /usr/local/bin/docker-entrypoint.sh: exec format error
 
-    When you see this error in the CVM logs, it indicates that your Docker images are not compatible with the x86 platform. This may happen if you built the image on an ARM or another platform. To resolve this issue, specify the platform by using the argument **`--platform linux/amd64`** when building your Docker images.
+When you see this error in the CVM logs, it indicates that your Docker images are not compatible with the x86 platform. This may happen if you built the image on an ARM or another platform. To resolve this issue, specify the platform by using the argument **`--platform linux/amd64`** when building your Docker images.
+
+### [FAILED] Failed to start Virtual Console Setup.
+
+You can safely ignore this error. This is an [known issue](https://github.com/Dstack-TEE/dstack/issues/321) found in OS image dstack v0.5.4.
+It's because the virtual console module was partially but not completely removed from the OS image.
