add attestation verifier example and docs

--- a/phala-cloud/confidential-ai/overview.mdx
+++ b/phala-cloud/confidential-ai/overview.mdx
@@ -66,6 +66,12 @@ And [Confidential AI Models](/phala-cloud/confidential-ai/confidential-model/con
 
 If you want to deploy custom model with complete control over your infrastructure, check [Confidential GPU](/phala-cloud/confidential-ai/confidential-gpu/overview) to depoy with various GPU configurations, configure CPU, RAM, and storage to match your workload requirements based on your needs.
 
+
+### Verify Attestation and Signature
+To ensure your workloads run securely in TEE, you can [Verify Attestation](./verify-attestation) to check the TEE hardware, operating system, source code, and distributed root-of-trust attestations. 
+
+Then you can [Verify Signature](./verify-signature) to confirm the integrity of your Confidential AI API requests and responses.
+
 ### Benchmark
 
 Our performance [benchmark](/phala-cloud/confidential-ai/benchmark) shows TEE mode on H100/H200 GPUs runs up to 99% efficiency, nearly matching native performance. This means you get confidential computing with minimal performance penalty.
